--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <footer>
       <p></p>
-        This project was coded by <a href="">Mathapelo Phaka</a> and is on
+        This project was coded by <a href="https://github.com/brie-mb">Mathapelo Phaka</a> and is on
         <a href="">GitHub</a> and <a href="">hosted on Netlify</a>
       </p>
     </footer>
