--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer>
       <p></p>
         This project was coded by <a href="https://github.com/brie-mb">Mathapelo Phaka</a> and is on
-        <a href="">GitHub</a> and <a href="">hosted on Netlify</a>
+        <a href="https://github.com/brie-mb/weather-project">GitHub</a> and <a href="https://main--weatherprojectss.netlify.app/">hosted on Netlify</a>
       </p>
     </footer>
     <script src="index.js"></script>
