--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              Saturday 15:32, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span>Saturday 15:32,</span> <span id='description'></span> <br />
+              Humidity: <strong id="current-humidity"></strong>, Wind: <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temperature">
