--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              <span>Saturday 15:32,</span> <span id='description'></span> <br />
+              <span id="current-time">Saturday 15:32,</span> <span id='description'></span> <br />
               Humidity: <strong id="current-humidity"></strong>, Wind: <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value" id="current-temperature-value">24</span
+            <span class="current-temperature-icon" id="current-temperature-icon"></span
+            ><span class="current-temperature-value" id="current-temperature-value"></span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div></main>
