--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     
     <footer>
       <p></p>
-        This project was coded by <a href="https://github.com/brie-mb">Mathapelo Phaka</a> and is on
-        <a href="https://github.com/brie-mb/weather-project">GitHub</a> and <a href="https://main--weatherprojectss.netlify.app/">hosted on Netlify</a>
+        This project was coded by <a href="https://github.com/brie-mb" target="_blank">Mathapelo Phaka</a> and is on
+        <a href="https://github.com/brie-mb/weather-project" target="_blank">GitHub</a> and <a href="https://weatherprojectss.netlify.app/">hosted on Netlify</a>
       </p>
     </footer>
     <script src="index.js"></script>
