Added forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div></main>
+        <div class="weather-forcast">
+      <div class="row">
+        <div class="col-2">
+          <div class="weather-forcast-day">Thu</div>
+          <img src="https://cdn2.iconfinder.com/data/icons/weather-flat-14/64/weather07-512.png" alt="weather-icon" width="50px">
+          <div class="weather-forcast-temp">
+            <span class="weather-forcast-temp-max">18°</span>
+            <span class="weather-forcast-temp-min">7°</span>
+          </div>
+        </div>
+      </div>
+    </div>
     
     <footer>
       <p></p>
